[docs] drop java options deprecated with java 11 (fixes #3763)