@@ -520,8 +520,6 @@ JAVA_OPTS="$JAVA_OPTS \
 
 JAVA_OPTS="$JAVA_OPTS \
             -server \
-            -XX:+UseParNewGC \
-            -XX:ParallelGCThreads=2 \
             -XX:SoftRefLRUPolicyMSPerMB=36000 \
             -XX:+UseConcMarkSweepGC"
 ```
